--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 :root {
-  --primary: #9B91BB;
+  --primary: #1965B6;
   --secondary: rgba(31, 209, 253, 0.4);
   --tertiary: rgb(251, 251, 252);
 }
